Finish up page, remove unavailaable sections.

--- a/about.html
+++ b/about.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-  <!-- Made for judahsrecords.com/about.html Code by ViktorJoeseph, Mon, 27 Jun 2022 -->
+  <!-- Made for judahsrecords.com/about.html Code by ViktorJoeseph, Mon, 4 July 2022 -->
   <head>
     <title>About | Judahs Records</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
@@ -76,11 +76,11 @@
             <ul class="menu">
               <li><a href="index.html">HOME</a></li>
               <li class="active"><a href="about.html">ABOUT</a></li>
-              <li><a href="projects.html">PROJECTS</a></li>
+              <!-- <li><a href="projects.html">PROJECTS</a></li> -->
               <li><a href="services.html">SERVICES</a></li>
               <li><a href="testimonials.html">TESTIMONIALS</a></li>
               <li><a href="pricing.html">PRICING</a></li>
-              <li><a href="blog.html">BLOG</a></li>
+              <!-- <li><a href="blog.html">BLOG</a></li> -->
               <li><a href="contact.html">CONTACTS</a></li>
             </ul>
             <span class="menu-gradient"></span>
@@ -117,7 +117,7 @@
     <main>
       <!-- Begin text-section -->
       <section
-        class="white-section parralax-section pb-xs-25 pb-md-25 pb-lg-60"
+        class="white-section v-separator parralax-section pb-xs-25 pb-md-25 pb-lg-60"
       >
         <div
           class="text-section text-position-right ovh pt-xs-25 pt-md-25 pt-lg-60 pb-xs-25 pb-md-25 pb-lg-60"
@@ -151,16 +151,15 @@
                     songwriters, composers and musical artists has been birthed
                     since inception who are adding values to the growth and
                     development of gospel music ministry in Nigeria and the
-                    world at large. 
+                    world at large.
                   </p>
                   <p>
-                    Judah's Records is the most featured and
-                    celebrated record label in Benin City, Nigeria with her
-                    productions spanning across the nooks and crannies of the
-                    world. We are highly reputable nation-wide for breeding
-                    first-class music professionals and poised to cater for the
-                    needs of the young music artists in the Gospel music
-                    industry.
+                    Judah's Records is the most featured and celebrated record
+                    label in Benin City, Nigeria with her productions spanning
+                    across the nooks and crannies of the world. We are highly
+                    reputable nation-wide for breeding first-class music
+                    professionals and poised to cater for the needs of the young
+                    music artists in the Gospel music industry.
                   </p>
                 </div>
               </div>
@@ -458,16 +457,16 @@
                 <h4>Core Values</h4>
                 <ul>
                   <li>
-                    <p>Lorem, ipsum dolor.</p>
+                    <p>Integrity</p>
                   </li>
                   <li>
-                    <p>Lorem ipsum dolor sit amet.</p>
+                    <p>Respect</p>
                   </li>
                   <li>
-                    <p>Lorem ipsum dolor sit.</p>
+                    <p>Loyalty</p>
                   </li>
                   <li>
-                    <p>Lorem ipsum dolor sit amet.</p>
+                    <p>Honour</p>
                   </li>
                 </ul>
               </div>
@@ -484,141 +483,75 @@
         />
       </section>
       <!-- End text-section -->
-      <!-- Begin recording tab -->
-      <section class="pt-xs-25 pt-md-25 pt-lg-60 pb-xs-25 pb-md-25 pb-lg-60">
+      <!-- Begin record studio -->
+      <section
+        class="dark-section v-separator pt-xs-50 pt-md-50 pt-lg-120 pb-xs-50 pb-md-50 pb-lg-120"
+      >
         <div class="container">
-          <div class="section-header">
-            <h2>Recording Studios</h2>
+          <div class="section-header white">
+            <h2>Recording studios</h2>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia non
-              minima, quibusdam blanditiis fugiat ratione!
+              Below are some of our studios available for music recording /
+              production...
             </p>
           </div>
         </div>
-        <div class="tab-wrap" data-tab-container>
-          <div class="tab-links">
-            <div class="tab-links__item active" data-show-tab="1">Studio A</div>
-            <div class="tab-links__item" data-show-tab="2">Studio B</div>
-          </div>
-          <div class="tab-blocks">
-            <div class="tab-blocks__item active" data-show-tab="1">
-              <div
-                class="tab-slider white-arrow inner-dots studio-slider"
-                data-slick='{
-								 	"slidesToShow": 1,
-								 	"swipeToSlide": true,
-								 	"adaptiveHeight": true,
-								 	"arrows": true,
-								 	"dots": true,
-								 	"responsive": [
-								 	]
-								 }'
-              >
-                <div class="tt-slider">
-                  <div class="tab-slider__item">
-                    <div
-                      class="studio-slide lazy"
-                      data-src="img/studio-1.jpg"
-                    ></div>
-                  </div>
-                </div>
-                <div class="tt-slider">
-                  <div class="tab-slider__item">
-                    <div
-                      class="studio-slide lazy"
-                      data-src="img/studio-2.jpg"
-                    ></div>
-                  </div>
-                </div>
-                <div class="tt-slider">
-                  <div class="tab-slider__item">
-                    <div
-                      class="studio-slide lazy"
-                      data-src="img/studio-3.jpg"
-                    ></div>
-                  </div>
-                </div>
+        <div
+          class="studio-slider white-arrow"
+          data-slick='{
+					 	"centerMode": true,
+					 	"centerPadding": "29.5%",
+					 	"responsive": [
+					 		{
+					 			"breakpoint": 1400,
+					 			"settings": {
+					 			  "centerPadding": "22%"
+					 			}
+					 		},
+					 		{
+					 			"breakpoint": 768,
+					 			"settings": {
+					 			  "centerPadding": "0%",
+					 			  "arrows": false,
+					 			  "dots": true,
+					 			  "autoplay": true,
+					 			  "autoplaySpeed": 3500
+					 			}
+					 		}
+					 	]
+					 }'
+        >
+          <div class="tt-slide">
+            <div class="studio-info">
+              <div class="studio-info_text">
+                <!-- <h4>
+                  <span class="color-main">Studio A</span> – Lorem, ipsum.
+                </h4> -->
               </div>
-              <div class="tab-text">
-                <h4>
-                  <span class="theme-color">Studio A</span> – Mixing Studio
-                </h4>
-                <p>
-                  Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-                  Ipsam esse porro temporibus officiis. Numquam consectetur at
-                  aperiam labore, alias quasi, minus voluptatibus error
-                  voluptates molestias ipsam in est explicabo eligendi porro!
-                  Aliquam nesciunt, voluptatem veritatis iure sit consectetur
-                  maxime quae hic ut iste facere, impedit eaque vero ipsam qui
-                  pariatur!
-                </p>
-                <p>
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                  Autem, necessitatibus.
-                </p>
-              </div>
+              <picture>
+                <source type="image/jpeg" srcset="img/studio-1.jpg" />
+                <img src="img/studio-1.jpg" class="studio-photo" alt="img" />
+              </picture>
             </div>
-            <div class="tab-blocks__item" data-show-tab="2">
-              <div
-                class="tab-slider white-arrow inner-dots studio-slider"
-                data-slick='{
-								 	"slidesToShow": 1,
-								 	"swipeToSlide": true,
-								 	"adaptiveHeight": true,
-								 	"arrows": true,
-								 	"dots": true,
-								 	"responsive": [
-								 	]
-								 }'
-              >
-                <div class="tt-slider">
-                  <div class="tab-slider__item">
-                    <div
-                      class="studio-slide lazy"
-                      data-src="img/studio-2.jpg"
-                    ></div>
-                  </div>
-                </div>
-                <div class="tt-slider">
-                  <div class="tab-slider__item">
-                    <div
-                      class="studio-slide lazy"
-                      data-src="img/studio-1.jpg"
-                    ></div>
-                  </div>
-                </div>
-                <div class="tt-slider">
-                  <div class="tab-slider__item">
-                    <div
-                      class="studio-slide lazy"
-                      data-src="img/studio-3.jpg"
-                    ></div>
-                  </div>
-                </div>
+          </div>
+          <div class="tt-slide">
+            <div class="studio-info">
+              <div class="studio-info_text">
+                <!-- <h4>
+                  <span class="color-main">Studio B</span> – Lorem, ipsum.
+                </h4> -->
               </div>
-              <div class="tab-text">
-                <h4>
-                  <span class="theme-color">Studio B</span> – Mixing Studio
-                </h4>
-                <p>
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                  Pariatur aliquid, quod itaque consequatur non deleniti
-                  necessitatibus rerum esse ut labore inventore explicabo,
-                  dolorem quidem atque? Sit quidem culpa nemo ut et adipisci, at
-                  earum recusandae expedita minus rem non animi!
-                </p>
-                <p>
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. At
-                  eaque quidem suscipit vitae, aperiam architecto!
-                </p>
-              </div>
+              <picture>
+                <source type="image/jpeg" srcset="img/studio-2.jpg" />
+                <img src="img/studio-2.jpg" class="studio-photo" alt="img" />
+              </picture>
             </div>
           </div>
         </div>
       </section>
-      <!-- End recording tab -->
+      <!-- End record studio -->
       <!-- Begin history -->
-      <section class="pt-xs-25 pt-md-25 pt-lg-60 pb-xs-25 pb-md-25 pb-lg-60">
+      <!-- <section class="pt-xs-25 pt-md-25 pt-lg-60 pb-xs-25 pb-md-25 pb-lg-60">
         <div class="container">
           <div class="section-header">
             <h2>Our History</h2>
@@ -756,7 +689,7 @@
             </div>
           </div>
         </div>
-      </section>
+      </section> -->
       <!-- End history -->
       <!-- Begin call-banner -->
       <section
@@ -765,10 +698,10 @@
       >
         <div class="container">
           <h2>Want to Record Your Own Hit?</h2>
-          <p>
+          <!-- <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum
             facere perspiciatis, ad vitae reprehenderit ipsum!
-          </p>
+          </p> -->
           <a href="tel:18007654321">
             <svg
               width="20"
@@ -862,8 +795,8 @@
               <div class="team-card">
                 <div class="engineer-card">
                   <div class="engineer-card_info">
-                    <h4>John Doe</h4>
-                    <p>Engineer / Owner</p>
+                    <h4>Evang. Victor Ikeji</h4>
+                    <p>Owner</p>
                   </div>
                   <img
                     src="images/img-3-removebg.png"
@@ -872,10 +805,7 @@
                   />
                 </div>
                 <div class="desription">
-                  <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                    Eum, nesciunt. Corrupti veritatis natus non aut.
-                  </p>
+                  <p>...</p>
                 </div>
               </div>
             </div>
@@ -883,8 +813,8 @@
               <div class="team-card">
                 <div class="engineer-card">
                   <div class="engineer-card_info">
-                    <h4>Jane Doe</h4>
-                    <p>Engineer / Owner</p>
+                    <h4>...</h4>
+                    <p>...</p>
                   </div>
                   <img
                     src="images/img-1-removebg.png"
@@ -893,10 +823,7 @@
                   />
                 </div>
                 <div class="desription">
-                  <p>
-                    Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-                    Ipsa quam fugit quos ipsam corrupti ratione.
-                  </p>
+                  <p>...</p>
                 </div>
               </div>
             </div>
@@ -904,8 +831,8 @@
               <div class="team-card">
                 <div class="engineer-card">
                   <div class="engineer-card_info">
-                    <h4>John Doe</h4>
-                    <p>Engineer</p>
+                    <h4>...</h4>
+                    <p>...</p>
                   </div>
                   <img
                     src="images/img-2-removebg.png"
@@ -914,10 +841,7 @@
                   />
                 </div>
                 <div class="desription">
-                  <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                    Nostrum officiis optio expedita dolorum tempora aspernatur.
-                  </p>
+                  <p>...</p>
                 </div>
               </div>
             </div>
@@ -925,8 +849,8 @@
               <div class="team-card">
                 <div class="engineer-card">
                   <div class="engineer-card_info">
-                    <h4>John Doe</h4>
-                    <p>Producer</p>
+                    <h4>...</h4>
+                    <p>...</p>
                   </div>
                   <img
                     src="images/img-6-removebg.png"
@@ -935,10 +859,7 @@
                   />
                 </div>
                 <div class="desription">
-                  <p>
-                    Lorem, ipsum dolor sit amet consectetur adipisicing elit.
-                    Dolorem nulla ullam blanditiis! Ipsam, adipisci laborum!
-                  </p>
+                  <p>...</p>
                 </div>
               </div>
             </div>
@@ -946,8 +867,8 @@
               <div class="team-card">
                 <div class="engineer-card">
                   <div class="engineer-card_info">
-                    <h4>John Doe</h4>
-                    <p>Producer</p>
+                    <h4>...</h4>
+                    <p>...</p>
                   </div>
                   <img
                     src="images/img-7-removebg.png"
@@ -956,16 +877,13 @@
                   />
                 </div>
                 <div class="desription">
-                  <p>
-                    Lorem, ipsum dolor sit amet consectetur adipisicing elit.
-                    Dolorem nulla ullam blanditiis! Ipsam, adipisci laborum!
-                  </p>
+                  <p>...</p>
                 </div>
               </div>
             </div>
           </div>
         </div>
-        <div
+        <!-- <div
           class="container pt-xs-25 pt-md-25 pt-lg-60 pb-xs-25 pb-md-25 pb-lg-60"
         >
           <h2 class="bottom-line">Our Artists</h2>
@@ -1003,7 +921,7 @@
               </ul>
             </div>
           </div>
-        </div>
+        </div> -->
         <div
           class="section-bg op-1 bg-fixed lazy"
           data-src="img/white-bg-1.jpg"
@@ -1251,7 +1169,7 @@
                 <li><a href="services.html">Services</a></li>
                 <li><a href="testimonials.html">Testimonials</a></li>
                 <li><a href="pricing.html">Pricing</a></li>
-                <li><a href="blog.html">Blog</a></li>
+                <!-- <li><a href="blog.html">BLOG</a></li> -->
                 <li><a href="contact.html">Contact</a></li>
               </ul>
             </nav>
@@ -1310,7 +1228,7 @@
                   <a href="fax:+18007654323">+234 708 599 0804</a>
                 </div>
               </li>
-              <li class="mb-xs-30 mb-lg-50">
+              <!-- <li class="mb-xs-30 mb-lg-50">
                 <div class="contact-icon">
                   <svg
                     width="20"
@@ -1328,7 +1246,7 @@
                   <p>Mon-Fri: -- : -- am – -- : -- pm</p>
                   <p>Sat-Sun: -- : -- am – -- : -- pm</p>
                 </div>
-              </li>
+              </li> -->
             </ul>
           </div>
           <div class="col-12">
@@ -1459,5 +1377,5 @@
     ></script>
   </body>
 
-  <!-- Made for judahsrecords.com/about.html Code by ViktorJoeseph, Mon, 27 Jun 2022 -->
+  <!-- Made for judahsrecords.com/about.html Code by ViktorJoeseph, Mon, 4 July 2022 -->
 </html>
