--- a/pricing.html
+++ b/pricing.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-  <!-- Made for judahsrecords.com/pricing.html Code by ViktorJoeseph, Mon, 27 Jun 2022 -->
+  <!-- Made for judahsrecords.com/pricing.html Code by ViktorJoeseph, Mon, 4 July 2022 -->
   <head>
     <title>Pricing | Judahs Records</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
@@ -76,11 +76,11 @@
             <ul class="menu">
               <li><a href="index.html">HOME</a></li>
               <li><a href="about.html">ABOUT</a></li>
-              <li><a href="projects.html">PROJECTS</a></li>
+              <!-- <li><a href="projects.html">PROJECTS</a></li> -->
               <li><a href="services.html">SERVICES</a></li>
               <li><a href="testimonials.html">TESTIMONIALS</a></li>
               <li class="active"><a href="pricing.html">PRICING</a></li>
-              <li><a href="blog.html">BLOG</a></li>
+              <!-- <li><a href="blog.html">BLOG</a></li> -->
               <li><a href="contact.html">CONTACTS</a></li>
             </ul>
             <span class="menu-gradient"></span>
@@ -144,18 +144,18 @@
                   class="pricing-card__top lazy"
                   data-src="img/pricing-card.jpg"
                 >
-                  <p><span>₦00</span> / hour</p>
+                  <p><span>₦30 000</span></p>
                 </div>
                 <div class="pricing-card__content">
                   <h4>
                     <span class="theme-color">Studio B</span> – Tracking Studio
                   </h4>
-                  <div class="prisec-card__include">
+                  <!-- <div class="prisec-card__include">
                     <p>Large Mic Selection</p>
                     <p>3 Isolation Booths / Big Room</p>
                     <p>Pro Tools HD3</p>
                     <p>Tape Machine</p>
-                  </div>
+                  </div> -->
                   <a
                     href="#bookingPopup"
                     class="button white btn-border center-btn open-popup-link sm-text mt-xs-30 mt-sm-40"
@@ -195,19 +195,19 @@
                   class="pricing-card__top lazy"
                   data-src="img/pricing-card.jpg"
                 >
-                  <p><span>₦00</span> / hour</p>
+                  <p><span>₦20 000</span></p>
                 </div>
                 <div class="pricing-card__content">
                   <h4>
                     <span class="theme-color">Studio A</span> – Mixing Studio
                   </h4>
-                  <div class="prisec-card__include">
+                  <!-- <div class="prisec-card__include">
                     <p>Genelec 8050's</p>
                     <p>Waves Platinum Bundle</p>
                     <p>Kontact</p>
                     <p>Neve Summing</p>
                     <p>SSL EQ</p>
-                  </div>
+                  </div> -->
                   <a
                     href="#bookingPopup"
                     class="button white btn-border center-btn open-popup-link sm-text mt-xs-30 mt-sm-40"
@@ -247,18 +247,18 @@
                   class="pricing-card__top lazy"
                   data-src="img/pricing-card.jpg"
                 >
-                  <p><span>$00</span> / hour</p>
+                  <p><span>₦20 000</span></p>
                 </div>
                 <div class="pricing-card__content">
                   <h4>
                     <span class="theme-color">Studio C</span> – Mastering Studio
                   </h4>
-                  <div class="prisec-card__include">
+                  <!-- <div class="prisec-card__include">
                     <p>Pro Tools</p>
                     <p>Logic</p>
                     <p>Yamaha 801's</p>
                     <p>Overdub Suite</p>
-                  </div>
+                  </div> -->
                   <a
                     href="#bookingPopup"
                     class="button white btn-border center-btn open-popup-link sm-text mt-xs-30 mt-sm-40"
@@ -1005,7 +1005,7 @@
                 <li><a href="services.html">Services</a></li>
                 <li><a href="testimonials.html">Testimonials</a></li>
                 <li><a href="pricing.html">Pricing</a></li>
-                <li><a href="blog.html">Blog</a></li>
+                <!-- <li><a href="blog.html">BLOG</a></li> -->
                 <li><a href="contact.html">Contact</a></li>
               </ul>
             </nav>
@@ -1064,7 +1064,7 @@
                   <a href="fax:+18007654323">+234 708 599 0804</a>
                 </div>
               </li>
-              <li class="mb-xs-30 mb-lg-50">
+              <!-- <li class="mb-xs-30 mb-lg-50">
                 <div class="contact-icon">
                   <svg
                     width="20"
@@ -1082,7 +1082,7 @@
                   <p>Mon-Fri: -- : -- am – -- : -- pm</p>
                   <p>Sat-Sun: -- : -- am – -- : -- pm</p>
                 </div>
-              </li>
+              </li> -->
             </ul>
           </div>
           <div class="col-12">
@@ -1213,5 +1213,5 @@
     ></script>
   </body>
 
-  <!-- Made for judahsrecords.com/pricing.html Code by ViktorJoeseph, Mon, 27 Jun 2022 -->
+  <!-- Made for judahsrecords.com/pricing.html Code by ViktorJoeseph, Mon, 4 July 2022 -->
 </html>
