--- a/projects.html
+++ b/projects.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-  <!-- Made for judahsrecords.com/projects.html Code by ViktorJoeseph, Mon, 27 Jun 2022 --
+  <!-- Made for judahsrecords.com/projects.html Code by ViktorJoeseph, Mon, 4 July 2022 -->
   <head>
     <title>Projects | Judahs Records</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
@@ -80,7 +80,7 @@
               <li><a href="services.html">SERVICES</a></li>
               <li><a href="testimonials.html">TESTIMONIALS</a></li>
               <li><a href="pricing.html">PRICING</a></li>
-              <li><a href="blog.html">BLOG</a></li>
+              <!-- <li><a href="blog.html">BLOG</a></li> -->
 
               <li><a href="contact.html">CONTACTS</a></li>
             </ul>
@@ -697,7 +697,7 @@
                 <li><a href="services.html">Services</a></li>
                 <li><a href="testimonials.html">Testimonials</a></li>
                 <li><a href="pricing.html">Pricing</a></li>
-                <li><a href="blog.html">Blog</a></li>
+                <!-- <li><a href="blog.html">BLOG</a></li> -->
 
                 <li><a href="contact.html">Contact</a></li>
               </ul>
@@ -757,7 +757,7 @@
                   <a href="fax:+18007654323">+234 708 599 0804</a>
                 </div>
               </li>
-              <li class="mb-xs-30 mb-lg-50">
+              <!-- <li class="mb-xs-30 mb-lg-50">
                 <div class="contact-icon">
                   <svg
                     width="20"
@@ -775,7 +775,7 @@
                   <p>Mon-Fri: -- : -- am – -- : -- pm</p>
                   <p>Sat-Sun: -- : -- am – -- : -- pm</p>
                 </div>
-              </li>
+              </li> -->
             </ul>
           </div>
           <div class="col-12">
@@ -906,5 +906,5 @@
     ></script>
   </body>
 
-  <!-- Made for judahsrecords.com/projects.html Code by ViktorJoeseph, Mon, 27 Jun 2022 -->
+  <!-- Made for judahsrecords.com/projects.html Code by ViktorJoeseph, Mon, 4 July 2022 -->
 </html>
