--- a/services.html
+++ b/services.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-  <!-- Made for judahsrecords.com/services.html Code by ViktorJoeseph, Mon, 27 Jun 2022 -->
+  <!-- Made for judahsrecords.com/services.html Code by ViktorJoeseph, Mon, 4 July 2022 -->
   <head>
     <title>Services | Judahs Records</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
@@ -76,11 +76,11 @@
             <ul class="menu">
               <li><a href="index.html">HOME</a></li>
               <li><a href="about.html">ABOUT</a></li>
-              <li><a href="projects.html">PROJECTS</a></li>
+              <!-- <li><a href="projects.html">PROJECTS</a></li> -->
               <li class="active"><a href="services.html">SERVICES</a></li>
               <li><a href="testimonials.html">TESTIMONIALS</a></li>
               <li><a href="pricing.html">PRICING</a></li>
-              <li><a href="blog.html">BLOG</a></li>
+              <!-- <li><a href="blog.html">BLOG</a></li> -->
               <li><a href="contact.html">CONTACTS</a></li>
             </ul>
             <span class="menu-gradient"></span>
@@ -121,9 +121,7 @@
         <div class="container">
           <div class="section-header">
             <h2>What We Do Best</h2>
-            <p>
-              We help you bring your music to life.
-            </p>
+            <p>We help you bring your music to life.</p>
           </div>
         </div>
         <div class="container-fluid">
@@ -132,13 +130,18 @@
         <div class="massonry-grid tile-price-grid tile-price-wrap">
           <a href="#" class="gallery-grid__item" target="_blank">
             <div class="tile-price-card">
-              <img src="data:image/gif;base64,R0lGODlhAQABAAAAACwAAAAAAQABAAA=" class="lazy" data-src="img/tile-price-1.jpg" alt="alt" />
+              <img
+                src="data:image/gif;base64,R0lGODlhAQABAAAAACwAAAAAAQABAAA="
+                class="lazy"
+                data-src="img/tile-price-1.jpg"
+                alt="alt"
+              />
               <div class="text">
                 <div>
                   <h2 class="font-gradient">Recording</h2>
                 </div>
                 <div class="price">
-                  <span><span>₦</span>00</span>
+                  <span><span>₦</span>4 000</span>
                   hour
                 </div>
               </div>
@@ -146,13 +149,18 @@
           </a>
           <a href="#" class="gallery-grid__item" target="_blank">
             <div class="tile-price-card">
-              <img src="data:image/gif;base64,R0lGODlhAQABAAAAACwAAAAAAQABAAA=" class="lazy" data-src="img/tile-price-3.jpg" alt="alt" />
+              <img
+                src="data:image/gif;base64,R0lGODlhAQABAAAAACwAAAAAAQABAAA="
+                class="lazy"
+                data-src="img/tile-price-3.jpg"
+                alt="alt"
+              />
               <div class="text">
                 <div>
                   <h2 class="font-gradient">Mixing</h2>
                 </div>
                 <div class="price">
-                  <span><span>₦</span>00</span>
+                  <span><span>₦</span>5 000</span>
                   hour
                 </div>
               </div>
@@ -160,13 +168,18 @@
           </a>
           <a href="#" class="gallery-grid__item" target="_blank">
             <div class="tile-price-card">
-              <img src="data:image/gif;base64,R0lGODlhAQABAAAAACwAAAAAAQABAAA=" class="lazy" data-src="img/tile-price-5.jpg" alt="alt" />
+              <img
+                src="data:image/gif;base64,R0lGODlhAQABAAAAACwAAAAAAQABAAA="
+                class="lazy"
+                data-src="img/tile-price-5.jpg"
+                alt="alt"
+              />
               <div class="text">
                 <div>
                   <h2 class="font-gradient">Mastering</h2>
                 </div>
                 <div class="price">
-                  <span><span>₦</span>00</span>
+                  <span><span>₦</span>5 000</span>
                   hour
                 </div>
               </div>
@@ -174,11 +187,16 @@
           </a>
           <a href="#" class="gallery-grid__item" target="_blank">
             <div class="tile-price-card">
-              <img src="data:image/gif;base64,R0lGODlhAQABAAAAACwAAAAAAQABAAA=" class="lazy" data-src="img/tile-price-2.jpg" alt="alt" />
+              <img
+                src="data:image/gif;base64,R0lGODlhAQABAAAAACwAAAAAAQABAAA="
+                class="lazy"
+                data-src="img/tile-price-2.jpg"
+                alt="alt"
+              />
               <div class="text">
                 <div><h2 class="font-gradient">Engineering</h2></div>
                 <div class="price">
-                  <span><span>₦</span>00</span>
+                  <span><span>₦</span>5 000</span>
                   hour
                 </div>
               </div>
@@ -186,11 +204,16 @@
           </a>
           <a href="#" class="gallery-grid__item" target="_blank">
             <div class="tile-price-card">
-              <img src="data:image/gif;base64,R0lGODlhAQABAAAAACwAAAAAAQABAAA=" class="lazy" data-src="img/tile-price-6.jpg" alt="alt" />
+              <img
+                src="data:image/gif;base64,R0lGODlhAQABAAAAACwAAAAAAQABAAA="
+                class="lazy"
+                data-src="img/tile-price-6.jpg"
+                alt="alt"
+              />
               <div class="text">
                 <div><h2 class="font-gradient">Post Production</h2></div>
                 <div class="price">
-                  <span><span>₦</span>00</span>
+                  <span><span>₦</span>5 000</span>
                   hour
                 </div>
               </div>
@@ -198,13 +221,18 @@
           </a>
           <a href="#" class="gallery-grid__item" target="_blank">
             <div class="tile-price-card">
-              <img src="data:image/gif;base64,R0lGODlhAQABAAAAACwAAAAAAQABAAA=" class="lazy" data-src="img/tile-price-4.jpg" alt="alt" />
+              <img
+                src="data:image/gif;base64,R0lGODlhAQABAAAAACwAAAAAAQABAAA="
+                class="lazy"
+                data-src="img/tile-price-4.jpg"
+                alt="alt"
+              />
               <div class="text">
                 <div>
                   <h2 class="font-gradient">Production</h2>
                 </div>
                 <div class="price">
-                  <span><span>₦</span>00</span>
+                  <span><span>₦</span>10 000</span>
                   hour
                 </div>
               </div>
@@ -231,7 +259,7 @@
                 <div class="hr">1 hr</div>
               </div>
               <div class="right">
-                <p>₦00.00</p>
+                <p>₦2 000</p>
                 <a href="#bookingPopup" class="open-popup-link">
                   <svg
                     class="icon icon-mic"
@@ -257,7 +285,7 @@
                 <div class="hr">2 hr</div>
               </div>
               <div class="right">
-                <p>₦00.00</p>
+                <p>₦4 000</p>
                 <a href="#bookingPopup" class="open-popup-link">
                   <svg
                     class="icon icon-mic"
@@ -283,7 +311,7 @@
                 <div class="hr">4 hr</div>
               </div>
               <div class="right">
-                <p>₦000.00</p>
+                <p>₦8 000</p>
                 <a href="#bookingPopup" class="open-popup-link">
                   <svg
                     class="icon icon-mic"
@@ -309,7 +337,7 @@
                 <div class="hr">6 hr</div>
               </div>
               <div class="right">
-                <p>₦000.00</p>
+                <p>₦12 000</p>
                 <a href="#bookingPopup" class="open-popup-link">
                   <svg
                     class="icon icon-mic"
@@ -335,7 +363,7 @@
                 <div class="hr">8 hr</div>
               </div>
               <div class="right">
-                <p>₦000.00</p>
+                <p>₦16 000</p>
                 <a href="#bookingPopup" class="open-popup-link">
                   <svg
                     class="icon icon-mic"
@@ -361,7 +389,7 @@
                 <div class="hr">10 hr</div>
               </div>
               <div class="right">
-                <p>₦000.00</p>
+                <p>₦20 000</p>
                 <a href="#bookingPopup" class="open-popup-link">
                   <svg
                     class="icon icon-mic"
@@ -516,11 +544,7 @@
                     </svg>
                   </div>
                 </div>
-                <h4>Recording</h4>
-                <p>
-                  Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-                  Rerum, molestiae?
-                </p>
+                <h4>Record</h4>
               </div>
             </div>
             <div class="mb-xs-30 col-sm-6 col-lg-4">
@@ -731,10 +755,6 @@
                   </div>
                 </div>
                 <h4>Production</h4>
-                <p>
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                  Laboriosam tempore reprehenderit quo ab. Sit, sapiente?
-                </p>
               </div>
             </div>
             <div class="mb-xs-30 col-sm-6 col-lg-4">
@@ -779,11 +799,7 @@
                     </svg>
                   </div>
                 </div>
-                <h4>Editing</h4>
-                <p>
-                  Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-                  Molestiae, quod? Obcaecati, animi voluptates?
-                </p>
+                <h4>Edit</h4>
               </div>
             </div>
             <div class="mb-xs-30 col-sm-6 col-lg-4">
@@ -865,10 +881,6 @@
                   </div>
                 </div>
                 <h4>Video Shoots</h4>
-                <p>
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                  Impedit cupiditate voluptates iusto eligendi, ex repellendus.
-                </p>
               </div>
             </div>
             <div class="mb-xs-30 col-sm-6 col-lg-4">
@@ -914,10 +926,6 @@
                   </div>
                 </div>
                 <h4>Voice Over</h4>
-                <p>
-                  Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-                  Libero, harum.
-                </p>
               </div>
             </div>
             <div class="mb-xs-30 col-sm-6 col-lg-4">
@@ -993,10 +1001,6 @@
                   </div>
                 </div>
                 <h4>Sound Design</h4>
-                <p>
-                  Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-                  Optio eos suscipit adipisci eum saepe.
-                </p>
               </div>
             </div>
           </div>
@@ -1252,7 +1256,7 @@
                 <li><a href="services.html">Services</a></li>
                 <li><a href="testimonials.html">Testimonials</a></li>
                 <li><a href="pricing.html">Pricing</a></li>
-                <li><a href="blog.html">Blog</a></li>
+                <!-- <li><a href="blog.html">BLOG</a></li> -->
 
                 <li><a href="contact.html">Contact</a></li>
               </ul>
@@ -1312,7 +1316,7 @@
                   <a href="fax:+18007654323">+234 708 599 0804</a>
                 </div>
               </li>
-              <li class="mb-xs-30 mb-lg-50">
+              <!-- <li class="mb-xs-30 mb-lg-50">
                 <div class="contact-icon">
                   <svg
                     width="20"
@@ -1330,7 +1334,7 @@
                   <p>Mon-Fri: -- : -- am – -- : -- pm</p>
                   <p>Sat-Sun: -- : -- am – -- : -- pm</p>
                 </div>
-              </li>
+              </li> -->
             </ul>
           </div>
           <div class="col-12">
@@ -1461,5 +1465,5 @@
     ></script>
   </body>
 
-  <!-- Made for judahsrecords.com/services.html Code by ViktorJoeseph, Mon, 27 Jun 2022 -->
+  <!-- Made for judahsrecords.com/services.html Code by ViktorJoeseph, Mon, 4 July 2022 -->
 </html>
