--- a/testimonials.html
+++ b/testimonials.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-  <!-- Made for judahsrecords.com/testimonials.html Code by ViktorJoeseph, Mon, 27 Jun 2022 -->
+  <!-- Made for judahsrecords.com/testimonials.html Code by ViktorJoeseph, Mon, 4 July 2022 -->
   <head>
     <title>Testimonials | Judahs Records</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
@@ -60,11 +60,13 @@
             <ul class="menu">
               <li><a href="index.html">HOME</a></li>
               <li><a href="about.html">ABOUT</a></li>
-              <li><a href="projects.html">PROJECTS</a></li>
+              <!-- <li><a href="projects.html">PROJECTS</a></li> -->
               <li><a href="services.html">SERVICES</a></li>
-              <li class="active"><a href="testimonials.html">TESTIMONIALS</a></li>
+              <li class="active">
+                <a href="testimonials.html">TESTIMONIALS</a>
+              </li>
               <li><a href="pricing.html">PRICING</a></li>
-              <li><a href="blog.html">BLOG</a></li>
+              <!-- <li><a href="blog.html">BLOG</a></li> -->
               <li><a href="contact.html">CONTACTS</a></li>
             </ul>
             <span class="menu-gradient"></span>
@@ -100,7 +102,7 @@
     <!-- End page-name -->
     <main>
       <!-- Begin latest-clients -->
-      <section class="pt-xs-25 pt-md-25 pt-lg-60">
+      <!-- <section class="pt-xs-25 pt-md-25 pt-lg-60">
         <div class="container">
           <div class="section-header">
             <h2>Our Latest Clients</h2>
@@ -209,10 +211,10 @@
             </div>
           </div>
         </div>
-      </section>
+      </section> -->
       <!-- End latest-clients -->
       <!-- Begin call-banner-2 -->
-      <section
+      <!-- <section
         class="call-banner white-section v-separator pt-xs-40 pt-md-50 pt-lg-100 pb-xs-40 pb-md-50 pb-lg-100"
       >
         <div class="container">
@@ -237,10 +239,10 @@
             >book session now
           </a>
         </div>
-      </section>
+      </section> -->
       <!-- End call-banner-2 -->
       <!-- Begin clients -->
-      <section
+      <!-- <section
         class="client-section shuffle-client dark-section v-separator pt-xs-50 pt-md-50 pt-lg-120 pb-xs-50 pb-md-50 pb-lg-120"
       >
         <div class="container">
@@ -313,7 +315,7 @@
           </div>
         </div>
         <div class="section-bg op-1 lazy" data-src="img/clients-bg.jpg"></div>
-      </section>
+      </section> -->
       <!-- End clients -->
 
       <!-- Begin review -->
@@ -779,7 +781,7 @@
                 <li><a href="services.html">Services</a></li>
                 <li><a href="testimonials.html">Testimonials</a></li>
                 <li><a href="pricing.html">Pricing</a></li>
-                <li><a href="blog.html">Blog</a></li>
+                <!-- <li><a href="blog.html">BLOG</a></li> -->
 
                 <li><a href="contact.html">Contact</a></li>
               </ul>
@@ -839,7 +841,7 @@
                   <a href="fax:+18007654323">+234 708 599 0804</a>
                 </div>
               </li>
-              <li class="mb-xs-30 mb-lg-50">
+              <!-- <li class="mb-xs-30 mb-lg-50">
                 <div class="contact-icon">
                   <svg
                     width="20"
@@ -857,7 +859,7 @@
                   <p>Mon-Fri: -- : -- am – -- : -- pm</p>
                   <p>Sat-Sun: -- : -- am – -- : -- pm</p>
                 </div>
-              </li>
+              </li> -->
             </ul>
           </div>
           <div class="col-12">
@@ -988,5 +990,5 @@
     ></script>
   </body>
 
-  <!-- Made for judahsrecords.com/testimonials.html Code by ViktorJoeseph, Mon, 27 Jun 2022 -->
+  <!-- Made for judahsrecords.com/testimonials.html Code by ViktorJoeseph, Mon, 4 July 2022 -->
 </html>
