--- a/blog-post.html
+++ b/blog-post.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-  <!-- Made for judahsrecords.com/blog-post.html Code by ViktorJoeseph, Mon, 27 Jun 2022 -->
+  <!-- Made for judahsrecords.com/blog-post.html Code by ViktorJoeseph, Mon, 4 July 2022 -->
   <head>
     <title>Blog Posts | Judahs Records</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
@@ -76,7 +76,7 @@
             <ul class="menu">
               <li><a href="index.html">HOME</a></li>
               <li><a href="about.html">ABOUT</a></li>
-              <li><a href="projects.html">PROJECTS</a></li>
+              <!-- <li><a href="projects.html">PROJECTS</a></li> -->
               <li><a href="services.html">SERVICES</a></li>
               <li><a href="testimonials.html">TESTIMONIALS</a></li>
               <li><a href="pricing.html">PRICING</a></li>
@@ -102,7 +102,7 @@
           <h1>Blog Post</h1>
           <ul class="bread-crumbs">
             <li><a href="index.html">Home</a></li>
-            <li><a href="blog.html">Blog</a></li>
+            <!-- <li><a href="blog.html">BLOG</a></li> -->
             <li><p>Computer Power - Worth Upgrading?</p></li>
           </ul>
         </div>
@@ -916,7 +916,7 @@
                 <li><a href="services.html">Services</a></li>
                 <li><a href="testimonials.html">Testimonials</a></li>
                 <li><a href="pricing.html">Pricing</a></li>
-                <li><a href="blog.html">Blog</a></li>
+                <!-- <li><a href="blog.html">BLOG</a></li> -->
                 <li><a href="contact.html">Contact</a></li>
               </ul>
             </nav>
@@ -975,7 +975,7 @@
                   <a href="fax:+18007654323">+234 708 599 0804</a>
                 </div>
               </li>
-              <li class="mb-xs-30 mb-lg-50">
+              <!-- <li class="mb-xs-30 mb-lg-50">
                 <div class="contact-icon">
                   <svg
                     width="20"
@@ -993,7 +993,7 @@
                   <p>Mon-Fri: -- : -- am – -- : -- pm</p>
                   <p>Sat-Sun: -- : -- am – -- : -- pm</p>
                 </div>
-              </li>
+              </li> -->
             </ul>
           </div>
           <div class="col-12">
@@ -1124,5 +1124,5 @@
     ></script>
   </body>
 
-  <!-- Made for judahsrecords.com/blog-post.html Code by ViktorJoeseph, Mon, 27 Jun 2022 -->
+  <!-- Made for judahsrecords.com/blog-post.html Code by ViktorJoeseph, Mon, 4 July 2022 -->
 </html>
