--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-  <!-- Made for judahsrecords.com/index.html Code by ViktorJoeseph, Mon, 27 Jun 2022 -->
+  <!-- Made for judahsrecords.com/index.html Code by ViktorJoeseph, Mon, 4 July 2022 -->
   <head>
     <title>Judahs Records | Recording Studio</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
@@ -75,11 +75,11 @@
             <ul class="menu">
               <li class="active"><a href="index.html">HOME</a></li>
               <li><a href="about.html">ABOUT</a></li>
-              <li><a href="projects.html">PROJECTS</a></li>
+              <!-- <li><a href="projects.html">PROJECTS</a></li> -->
               <li><a href="services.html">SERVICES</a></li>
               <li><a href="testimonials.html">TESTIMONIALS</a></li>
               <li><a href="pricing.html">PRICING</a></li>
-              <li><a href="blog.html">BLOG</a></li>
+              <!-- <li><a href="blog.html">BLOG</a></li> -->
               <li><a href="contact.html">CONTACTS</a></li>
             </ul>
             <span class="menu-gradient"></span>
@@ -114,38 +114,37 @@
                   Music Recording | Music Production Studio
                 </p>
                 <p class="tt-slide_header">
-                  <span class="font-gradient">We Only Record</span
-                  ><br />Quality
+                  <span class="font-gradient">We Only Record</span><br />Quality
                 </p>
                 <h2 class="music-icons">
-                  <a href="https://spotify.com/">
+                  <a href="https://spotify.com/" target="_blank">
                     <img src="./music-icons/spotify.png" alt="spotify" />
                   </a>
-                  <a href="https://music.youtube.com/">
+                  <a href="https://music.youtube.com/" target="_blank">
                     <img
                       src="./music-icons/youtube-music.png"
                       alt="youtube-music"
                     />
                   </a>
-                  <a href="https://www.deezer.com/"
+                  <a href="https://www.deezer.com/" target="_blank"
                     ><img src="./music-icons/deezer.png" alt="deezer" />
                   </a>
-                  <a href="https://soundcloud.com/">
+                  <a href="https://soundcloud.com/" target="_blank">
                     <img src="./music-icons/soundcloud.png" alt="soundcloud" />
                   </a>
-                  <a href="https://youtube.com/">
+                  <a href="https://youtube.com/" target="_blank">
                     <img src="./music-icons/youtube.png" alt="youtube" />
                   </a>
-                  <a href="https://music.amazon.com/">
+                  <a href="https://music.amazon.com/" target="_blank">
                     <img
                       src="./music-icons/amazon-music.png"
                       alt="amazon-music"
                     />
                   </a>
-                  <a href="https://audiomack.com/">
+                  <a href="https://audiomack.com/" target="_blank">
                     <img src="./music-icons/audiomack.png" alt="audiomack" />
                   </a>
-                  <a href="https://www.tiktok.com/"
+                  <a href="https://www.tiktok.com/" target="_blank"
                     ><img src="./music-icons/tiktok.png" alt="tiktok"
                   /></a>
                 </h2>
@@ -292,7 +291,7 @@
       <!-- End text-section -->
       <!-- Begin record studio -->
       <section
-        class="dark-section v-separator pt-xs-50 pt-md-50 pt-lg-120 pb-xs-50 pb-md-50 pb-lg-120"
+        class="dark-section pt-xs-50 pt-md-50 pt-lg-120 pb-xs-50 pb-md-50 pb-lg-120"
       >
         <div class="container">
           <div class="section-header white">
@@ -331,9 +330,9 @@
           <div class="tt-slide">
             <div class="studio-info">
               <div class="studio-info_text">
-                <h4>
+                <!-- <h4>
                   <span class="color-main">Studio A</span> – Lorem, ipsum.
-                </h4>
+                </h4> -->
               </div>
               <picture>
                 <source type="image/jpeg" srcset="img/studio-1.jpg" />
@@ -344,9 +343,9 @@
           <div class="tt-slide">
             <div class="studio-info">
               <div class="studio-info_text">
-                <h4>
+                <!-- <h4>
                   <span class="color-main">Studio B</span> – Lorem, ipsum.
-                </h4>
+                </h4> -->
               </div>
               <picture>
                 <source type="image/jpeg" srcset="img/studio-2.jpg" />
@@ -358,7 +357,7 @@
       </section>
       <!-- End record studio -->
       <!-- Begin project-section -->
-      <section
+      <!-- <section
         class="block-bg-projects parralax-section v-separator pt-xs-25 pt-md-25 pt-lg-60 pb-xs-25 pb-md-25 pb-lg-60"
       >
         <div class="ovh">
@@ -519,10 +518,10 @@
             </div>
           </div>
         </div>
-      </section>
+      </section> -->
       <!-- End project-section -->
       <!-- Begin clients -->
-      <section
+      <!-- <section
         class="client-section dark-section v-separator pt-xs-50 pt-md-50 pt-lg-120 pb-xs-50 pb-md-50 pb-lg-120"
       >
         <div class="container">
@@ -620,10 +619,10 @@
           class="section-bg bg-fixed lazy"
           data-src="img/clients-bg-2.jpg"
         ></div>
-      </section>
+      </section> -->
       <!-- End clients -->
       <!-- Begin news section -->
-      <section
+      <!-- <section
         class="white-section v-separator parralax-section pt-xs-25 pt-md-25 pt-lg-60 pb-xs-25 pb-md-25 pb-lg-60"
       >
         <div
@@ -938,7 +937,7 @@
           data-paroller-type="foreground"
           alt="bg"
         />
-      </section>
+      </section> -->
       <!-- End news-section -->
       <!-- Begin testimonials -->
       <section
@@ -1163,8 +1162,8 @@
                 <div class="tt-slide">
                   <div class="engineer-card">
                     <div class="engineer-card_info">
-                      <h4>John Doe</h4>
-                      <p>Engineer / Owner</p>
+                      <h4>Evang. Victor Ikeji</h4>
+                      <p>Owner</p>
                       <a href="about.html" class="read-more">
                         <svg
                           width="9"
@@ -1194,10 +1193,10 @@
                 <div class="tt-slide">
                   <div class="engineer-card">
                     <div class="engineer-card_info">
-                      <h4>Jane Doe</h4>
-                      <p>Engineer / Owner</p>
+                      <h4>...</h4>
+                      <p>...</p>
                       <a href="about.html" class="read-more">
-                        <svg
+                        <!-- <svg
                           width="9"
                           height="10"
                           viewBox="0 0 9 10"
@@ -1206,7 +1205,7 @@
                           <path
                             d="M1.47188 0.337891C1.06823 0.103516 0.723177 0.0709635 0.436719 0.240234C0.150261 0.402995 0.00703144 0.71875 0.00703144 1.1875V8.0625C0.00703144 8.53125 0.150261 8.84701 0.436719 9.00977C0.723177 9.17253 1.06823 9.13997 1.47188 8.91211L7.4875 5.46484C7.89115 5.23047 8.09297 4.95052 8.09297 4.625C8.09297 4.29948 7.89115 4.01953 7.4875 3.78516L1.47188 0.337891Z"
                           /></svg
-                        >know more
+                        >know more -->
                       </a>
                     </div>
                     <picture>
@@ -1225,10 +1224,10 @@
                 <div class="tt-slide">
                   <div class="engineer-card">
                     <div class="engineer-card_info">
-                      <h4>Jane Doe</h4>
-                      <p>Engineer</p>
+                      <h4>...</h4>
+                      <p>...</p>
                       <a href="about.html" class="read-more">
-                        <svg
+                        <!-- <svg
                           width="9"
                           height="10"
                           viewBox="0 0 9 10"
@@ -1237,7 +1236,7 @@
                           <path
                             d="M1.47188 0.337891C1.06823 0.103516 0.723177 0.0709635 0.436719 0.240234C0.150261 0.402995 0.00703144 0.71875 0.00703144 1.1875V8.0625C0.00703144 8.53125 0.150261 8.84701 0.436719 9.00977C0.723177 9.17253 1.06823 9.13997 1.47188 8.91211L7.4875 5.46484C7.89115 5.23047 8.09297 4.95052 8.09297 4.625C8.09297 4.29948 7.89115 4.01953 7.4875 3.78516L1.47188 0.337891Z"
                           /></svg
-                        >know more
+                        >know more -->
                       </a>
                     </div>
                     <picture>
@@ -1256,10 +1255,10 @@
                 <div class="tt-slide">
                   <div class="engineer-card">
                     <div class="engineer-card_info">
-                      <h4>John Doe</h4>
-                      <p>Producer</p>
+                      <h4>...</h4>
+                      <p>...</p>
                       <a href="about.html" class="read-more">
-                        <svg
+                        <!-- <svg
                           width="9"
                           height="10"
                           viewBox="0 0 9 10"
@@ -1268,38 +1267,7 @@
                           <path
                             d="M1.47188 0.337891C1.06823 0.103516 0.723177 0.0709635 0.436719 0.240234C0.150261 0.402995 0.00703144 0.71875 0.00703144 1.1875V8.0625C0.00703144 8.53125 0.150261 8.84701 0.436719 9.00977C0.723177 9.17253 1.06823 9.13997 1.47188 8.91211L7.4875 5.46484C7.89115 5.23047 8.09297 4.95052 8.09297 4.625C8.09297 4.29948 7.89115 4.01953 7.4875 3.78516L1.47188 0.337891Z"
                           /></svg
-                        >know more
-                      </a>
-                    </div>
-                    <picture>
-                      <source
-                        type="image/jpeg"
-                        srcset="images/img-5-removebg.png"
-                      />
-                      <img
-                        src="images/img-5-removebg.png"
-                        class="engineer-avatar"
-                        alt="img"
-                      />
-                    </picture>
-                  </div>
-                </div>
-                <div class="tt-slide">
-                  <div class="engineer-card">
-                    <div class="engineer-card_info">
-                      <h4>Jane Doe</h4>
-                      <p>Engineer</p>
-                      <a href="about.html" class="read-more">
-                        <svg
-                          width="9"
-                          height="10"
-                          viewBox="0 0 9 10"
-                          xmlns="http://www.w3.org/2000/svg"
-                        >
-                          <path
-                            d="M1.47188 0.337891C1.06823 0.103516 0.723177 0.0709635 0.436719 0.240234C0.150261 0.402995 0.00703144 0.71875 0.00703144 1.1875V8.0625C0.00703144 8.53125 0.150261 8.84701 0.436719 9.00977C0.723177 9.17253 1.06823 9.13997 1.47188 8.91211L7.4875 5.46484C7.89115 5.23047 8.09297 4.95052 8.09297 4.625C8.09297 4.29948 7.89115 4.01953 7.4875 3.78516L1.47188 0.337891Z"
-                          /></svg
-                        >know more
+                        >know more -->
                       </a>
                     </div>
                     <picture>
@@ -1318,10 +1286,10 @@
                 <div class="tt-slide">
                   <div class="engineer-card">
                     <div class="engineer-card_info">
-                      <h4>John Doe</h4>
-                      <p>Producer</p>
+                      <h4>...</h4>
+                      <p>...</p>
                       <a href="about.html" class="read-more">
-                        <svg
+                        <!-- <svg
                           width="9"
                           height="10"
                           viewBox="0 0 9 10"
@@ -1330,7 +1298,7 @@
                           <path
                             d="M1.47188 0.337891C1.06823 0.103516 0.723177 0.0709635 0.436719 0.240234C0.150261 0.402995 0.00703144 0.71875 0.00703144 1.1875V8.0625C0.00703144 8.53125 0.150261 8.84701 0.436719 9.00977C0.723177 9.17253 1.06823 9.13997 1.47188 8.91211L7.4875 5.46484C7.89115 5.23047 8.09297 4.95052 8.09297 4.625C8.09297 4.29948 7.89115 4.01953 7.4875 3.78516L1.47188 0.337891Z"
                           /></svg
-                        >know more
+                        >know more -->
                       </a>
                     </div>
                     <picture>
@@ -1370,8 +1338,17 @@
         </div>
         <div id="instafeed" class="instagram-grid-full"></div>
         <div class="show-insta pb-xs-40 pb-md-50 pb-lg-100">
-          <a href="https://instagram.com/judahsrecords" target="_blank" class="button dark center-btn mt-xs-30 mt-md-40">
-            <svg width="14" height="13" viewBox="0 0 14 13" xmlns="http://www.w3.org/2000/svg">
+          <a
+            href="https://instagram.com/judahsrecords"
+            target="_blank"
+            class="button dark center-btn mt-xs-30 mt-md-40"
+          >
+            <svg
+              width="14"
+              height="13"
+              viewBox="0 0 14 13"
+              xmlns="http://www.w3.org/2000/svg"
+            >
               <path
                 d="M3.315 9.72754H0.572813C0.437396 9.72754 0.318906 9.77832 0.217344 9.87988C0.115781 9.98145 0.0650001 10.1042 0.0650001 10.248V11.6191C0.0650001 11.7546 0.115781 11.873 0.217344 11.9746C0.318906 12.0762 0.437396 12.127 0.572813 12.127H3.315C3.45888 12.127 3.57737 12.0762 3.67047 11.9746C3.77203 11.873 3.82281 11.7546 3.82281 11.6191V10.248C3.82281 10.1042 3.77203 9.98145 3.67047 9.87988C3.57737 9.77832 3.45888 9.72754 3.315 9.72754ZM3.315 6.65527H0.572813C0.437396 6.65527 0.318906 6.70605 0.217344 6.80762C0.115781 6.90918 0.0650001 7.02767 0.0650001 7.16309V8.53418C0.0650001 8.67806 0.115781 8.80078 0.217344 8.90234C0.318906 9.00391 0.437396 9.05469 0.572813 9.05469H3.315C3.45888 9.05469 3.57737 9.00391 3.67047 8.90234C3.77203 8.80078 3.82281 8.67806 3.82281 8.53418V7.16309C3.82281 7.02767 3.77203 6.90918 3.67047 6.80762C3.57737 6.70605 3.45888 6.65527 3.315 6.65527ZM3.315 3.57031H0.572813C0.437396 3.57031 0.318906 3.62109 0.217344 3.72266C0.115781 3.82422 0.0650001 3.94694 0.0650001 4.09082V5.46191C0.0650001 5.59733 0.115781 5.71582 0.217344 5.81738C0.318906 5.91895 0.437396 5.96973 0.572813 5.96973H3.315C3.45888 5.96973 3.57737 5.91895 3.67047 5.81738C3.77203 5.71582 3.82281 5.59733 3.82281 5.46191V4.09082C3.82281 3.94694 3.77203 3.82422 3.67047 3.72266C3.57737 3.62109 3.45888 3.57031 3.315 3.57031ZM7.93609 9.72754H5.19391C5.05003 9.72754 4.9273 9.77832 4.82574 9.87988C4.73264 9.98145 4.68609 10.1042 4.68609 10.248V11.6191C4.68609 11.7546 4.73264 11.873 4.82574 11.9746C4.9273 12.0762 5.05003 12.127 5.19391 12.127H7.93609C8.07151 12.127 8.19 12.0762 8.29156 11.9746C8.39313 11.873 8.44391 11.7546 8.44391 11.6191V10.248C8.44391 10.1042 8.39313 9.98145 8.29156 9.87988C8.19846 9.77832 8.07997 9.72754 7.93609 9.72754ZM7.93609 6.65527H5.19391C5.05003 6.65527 4.9273 6.70605 4.82574 6.80762C4.73264 6.90918 4.68609 7.02767 4.68609 7.16309V8.53418C4.68609 8.67806 4.73264 8.80078 4.82574 8.90234C4.9273 9.00391 5.05003 9.05469 5.19391 9.05469H7.93609C8.07151 9.05469 8.19 9.00391 8.29156 8.90234C8.39313 8.80078 8.44391 8.67806 8.44391 8.53418V7.16309C8.44391 7.02767 8.39313 6.90918 8.29156 6.80762C8.19846 6.70605 8.07997 6.65527 7.93609 6.65527ZM12.5572 9.72754H9.815C9.67112 9.72754 9.5484 9.77832 9.44684 9.87988C9.35374 9.98145 9.30719 10.1042 9.30719 10.248V11.6191C9.30719 11.7546 9.35374 11.873 9.44684 11.9746C9.5484 12.0762 9.67112 12.127 9.815 12.127H12.5572C12.6926 12.127 12.8111 12.0762 12.9127 11.9746C13.0142 11.873 13.065 11.7546 13.065 11.6191V10.248C13.065 10.1042 13.0142 9.98145 12.9127 9.87988C12.8111 9.77832 12.6926 9.72754 12.5572 9.72754ZM12.5572 6.65527H9.815C9.67112 6.65527 9.5484 6.70605 9.44684 6.80762C9.35374 6.90918 9.30719 7.02767 9.30719 7.16309V8.53418C9.30719 8.67806 9.35374 8.80078 9.44684 8.90234C9.5484 9.00391 9.67112 9.05469 9.815 9.05469H12.5572C12.6926 9.05469 12.8111 9.00391 12.9127 8.90234C13.0142 8.80078 13.065 8.67806 13.065 8.53418V7.16309C13.065 7.02767 13.0142 6.90918 12.9127 6.80762C12.8111 6.70605 12.6926 6.65527 12.5572 6.65527ZM12.5572 3.57031H9.815C9.67112 3.57031 9.5484 3.62109 9.44684 3.72266C9.35374 3.82422 9.30719 3.94694 9.30719 4.09082V5.46191C9.30719 5.59733 9.35374 5.71582 9.44684 5.81738C9.5484 5.91895 9.67112 5.96973 9.815 5.96973H12.5572C12.6926 5.96973 12.8111 5.91895 12.9127 5.81738C13.0142 5.71582 13.065 5.59733 13.065 5.46191V4.09082C13.065 3.94694 13.0142 3.82422 12.9127 3.72266C12.8111 3.62109 12.6926 3.57031 12.5572 3.57031ZM12.5572 0.498047H9.815C9.67112 0.498047 9.5484 0.548828 9.44684 0.650391C9.35374 0.751953 9.30719 0.870443 9.30719 1.00586V2.37695C9.30719 2.52083 9.35374 2.64355 9.44684 2.74512C9.5484 2.84668 9.67112 2.89746 9.815 2.89746H12.5572C12.6926 2.89746 12.8111 2.84668 12.9127 2.74512C13.0142 2.64355 13.065 2.52083 13.065 2.37695V1.00586C13.065 0.870443 13.0142 0.751953 12.9127 0.650391C12.8111 0.548828 12.6926 0.498047 12.5572 0.498047Z"
               ></path></svg
@@ -1412,7 +1389,7 @@
                   ></span>
                   Book Engineer Session
                 </h4>
-                <p>from <span>₦00 / hour</span></p>
+                <p>from <span>₦2 000 / hour</span></p>
               </div>
             </div>
             <div class="col-md-4">
@@ -1431,7 +1408,7 @@
                   ></span>
                   Book Producer Session
                 </h4>
-                <p>from <span>₦000 / hour</span></p>
+                <p>from <span>₦3 000 / hour</span></p>
               </div>
             </div>
             <div class="col-md-4">
@@ -1450,7 +1427,7 @@
                   ></span>
                   Book Assistant Session
                 </h4>
-                <p>from <span>₦00 / hour</span></p>
+                <p>from <span>₦2 000 / hour</span></p>
               </div>
             </div>
           </div>
@@ -1698,7 +1675,7 @@
                 <li><a href="services.html">Services</a></li>
                 <li><a href="testimonials.html">Testimonials</a></li>
                 <li><a href="pricing.html">Pricing</a></li>
-                <li><a href="blog.html">Blog</a></li>
+                <!-- <li><a href="blog.html">BLOG</a></li> -->
                 <li><a href="contact.html">Contact</a></li>
               </ul>
             </nav>
@@ -1757,7 +1734,7 @@
                   <a href="fax:+18007654323">+234 708 599 0804</a>
                 </div>
               </li>
-              <li class="mb-xs-30 mb-lg-50">
+              <!-- <li class="mb-xs-30 mb-lg-50">
                 <div class="contact-icon">
                   <svg
                     width="20"
@@ -1775,7 +1752,7 @@
                   <p>Mon-Fri: -- : -- am – -- : -- pm</p>
                   <p>Sat-Sun: -- : -- am – -- : -- pm</p>
                 </div>
-              </li>
+              </li> -->
             </ul>
           </div>
           <div class="col-12">
@@ -1920,5 +1897,5 @@
     ></script>
   </body>
 
-  <!-- Made for judahsrecords.com/index.html Code by ViktorJoeseph, Mon, 27 Jun 2022 -->
+  <!-- Made for judahsrecords.com/index.html Code by ViktorJoeseph, Mon, 4 July 2022 -->
 </html>
